--- a/_posts/2020-11-24-AkW5.html
+++ b/_posts/2020-11-24-AkW5.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری سخنرانی مجازی: «آفریقا در جهان اقیانوس هند: مسئلهٔ مرزها در تاریخ هنر»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,آفریقا,اقیانوس هود,تاریخ هنر,مرز 
+---
+title: "برگزاری سخنرانی مجازی: «آفریقا در جهان اقیانوس هند: مسئلهٔ مرزها در تاریخ هنر»"
+authors: asmaneh
+types: news
+tags: سخنرانی,آفریقا,اقیانوس هود,تاریخ هنر,مرز
 featured: false
-slug: AkW5 
-excerpt: This talk revisits the 2019 exhibition World on the Horizon: Swahili Arts Across the Indian Ocean (curated by myself and Allyson Purpura), which used  the Swahili coast as a springboard to consider what it means to see the world and its arts not in terms of borders of continents or nations, but in terms of migration and mobilities. I consider the exhibition’s critical reception, impact, and also its blind spots.  
---- 
+slug: AkW5
+excerpt: "This talk revisits the 2019 exhibition World on the Horizon: Swahili Arts Across the Indian Ocean (curated by myself and Allyson Purpura), which used  the Swahili coast as a springboard to consider what it means to see the world and its arts not in terms of borders of continents or nations, but in terms of migration and mobilities. I consider the exhibition’s critical reception, impact, and also its blind spots."
+---
 <p>برگزاری سخنرانی مجازی: &laquo;آفریقا در جهان اقیانوس هند: مسئلهٔ مرزها در تاریخ هنر&raquo;</p>
 <p>سخنران: پریتا میر| دانشگاه نیویورک</p>
 <p>برگزارکننده: مرکز تاریخ مادی سلسله، دانشگاه نیویورک (NYU)</p>
