--- a/_posts/2021-01-23-jzXx.html
+++ b/_posts/2021-01-23-jzXx.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «پیشینهٔ تاریخی همجواری باغ و شهر در ایران»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,باغ,ایران,لادن اعتضادی 
+---
+title: "برگزاری سخنرانی مجازی: «پیشینهٔ تاریخی همجواری باغ و شهر در ایران»"
+authors: asmaneh
+types: news
+tags: سخنرانی,باغ,ایران,لادن اعتضادی
 featured: false
-featureImg: "/assets/img/posts/jzXx.jpg" 
-slug: jzXx 
-gallery: 
-- image_path: "/assets/img/posts/jzXx.jpg" 
-  title: "برگزاری سخنرانی مجازی: «پیشینهٔ تاریخی همجواری باغ و شهر در ایران»" 
- 
-excerpt: سخنران: دکتر لادن اعتضادی 
---- 
+featureImg: "/assets/img/posts/jzXx.jpg"
+slug: jzXx
+gallery:
+- image_path: "/assets/img/posts/jzXx.jpg"
+  title: "برگزاری سخنرانی مجازی: «پیشینهٔ تاریخی همجواری باغ و شهر در ایران»"
+
+excerpt: "سخنران: دکتر لادن اعتضادی" 
+---
 <p>&nbsp;برگزاری سخنرانی مجازی: &laquo;پیشینهٔ تاریخی همجواری باغ و شهر در ایران&raquo;</p>
 <p>سخنران: دکتر لادن اعتضادی</p>
 <p>&nbsp;میزبان: گروه مطالعات معماری ایران دانشگاه تهران</p>
