--- a/_posts/2021-01-25-cSe4.html
+++ b/_posts/2021-01-25-cSe4.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «انديشهٔ ايرانشهر در روزگار ساسانى»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,ایرانشهر,ساسانیان,تورج دریایی 
+---
+title: "برگزاری سخنرانی مجازی: «انديشهٔ ايرانشهر در روزگار ساسانى»"
+authors: asmaneh
+types: news
+tags: سخنرانی,ایرانشهر,ساسانیان,تورج دریایی
 featured: false
-featureImg: "/assets/img/posts/cSe4.jpg" 
-slug: cSe4 
-gallery: 
-- image_path: "/assets/img/posts/cSe4.jpg" 
-  title: "برگزاری سخنرانی مجازی: «انديشهٔ ايرانشهر در روزگار ساسانى»" 
- 
-excerpt: سخنران: دکتر تورج دريايى 
---- 
+featureImg: "/assets/img/posts/cSe4.jpg"
+slug: cSe4
+gallery:
+- image_path: "/assets/img/posts/cSe4.jpg"
+  title: "برگزاری سخنرانی مجازی: «انديشهٔ ايرانشهر در روزگار ساسانى»"
+
+excerpt: "سخنران: دکتر تورج دريايى" 
+---
 <p>&nbsp;برگزاری سخنرانی مجازی: &laquo;انديشهٔ ايرانشهر در روزگار ساسانى&raquo;</p>
 <p>سخنران: دکتر تورج دريايى</p>
 <p>&nbsp;میزبان: گروه مطالعات معماری ایران دانشگاه تهران</p>
