--- a/_posts/2021-02-22-RyTy.html
+++ b/_posts/2021-02-22-RyTy.html
@@ -1,19 +1,19 @@
---- 
-title: "برگزاری همایش: «کاروان‌سراهای ایران: گذشته، حال، آینده»" 
-authors: asmaneh 
-types: news 
-tags: همایش,کاروان‌سرا,ایران 
+---
+title: "برگزاری همایش: «کاروان‌سراهای ایران: گذشته، حال، آینده»"
+authors: asmaneh
+types: news
+tags: همایش,کاروان‌سرا,ایران
 featured: false
-featureImg: "/assets/img/posts/RyTy.jpg" 
-slug: RyTy 
-gallery: 
-- image_path: "/assets/img/posts/RyTy.jpg" 
-  title: "برگزاری همایش: «کاروان‌سراهای ایران: گذشته، حال، آینده»" 
- 
-excerpt: برگزارکننده: مؤسسۀ مطالعات و تحقیقات اجتماعی دانشگاه تهران
+featureImg: "/assets/img/posts/RyTy.jpg"
+slug: RyTy
+gallery:
+- image_path: "/assets/img/posts/RyTy.jpg"
+  title: "برگزاری همایش: «کاروان‌سراهای ایران: گذشته، حال، آینده»"
 
-زمان: ۵ و ۶ اسفند ۱۳۹۹ 
---- 
+excerpt: "برگزارکننده: مؤسسۀ مطالعات و تحقیقات اجتماعی دانشگاه تهران"
+
+زمان: ۵ و ۶ اسفند ۱۳۹۹
+---
 <p>برگزاری همایش: &laquo;کاروان&zwnj;سراهای ایران: گذشته، حال، آینده&raquo;</p>
 <p>برگزارکننده: مؤسسۀ مطالعات و تحقیقات اجتماعی دانشگاه تهران</p>
 <p>زمان: ۵ و ۶ اسفند ۱۳۹۹<br /><br /></p>
