--- a/_posts/2021-02-23-NCmq.html
+++ b/_posts/2021-02-23-NCmq.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| مسیر دگرگونی خیابان تاریخی (شاه‌عباسی) مشهد؛ در دورۀ پهلوی اول" 
-authors: asmaneh 
-types: news 
-tags: دفاع,کارشناسی ارشد,مطالعات معماری,مشهد,خیابان,پهلوی,محمدصادق توسلی‌رجایی 
+---
+title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| مسیر دگرگونی خیابان تاریخی (شاه‌عباسی) مشهد؛ در دورۀ پهلوی اول"
+authors: asmaneh
+types: news
+tags: دفاع,کارشناسی ارشد,مطالعات معماری,مشهد,خیابان,پهلوی,محمدصادق توسلی‌رجایی
 featured: false
-slug: NCmq 
-excerpt: این تحقیق نشان می‌دهد که خیابان مشهد در دورۀ پهلوی اول در دو برهه دگرگون می‌شود و سرگذشت آن با رقابت سیاسی صاحبان قدرت در مشهد گره خورده است: نایب‌التولیۀ آستان قدس و استاندار. در برهۀ اول تفوق با نایب‌التولیه است؛ اما در برهۀ دوم استانداری و شهرداری بر مقدرات شهر و خیابان مسلط می‌شود. 
---- 
+slug: NCmq
+excerpt: "این تحقیق نشان می‌دهد که خیابان مشهد در دورۀ پهلوی اول در دو برهه دگرگون می‌شود و سرگذشت آن با رقابت سیاسی صاحبان قدرت در مشهد گره خورده است: نایب‌التولیۀ آستان قدس و استاندار. در برهۀ اول تفوق با نایب‌التولیه است؛ اما در برهۀ دوم استانداری و شهرداری بر مقدرات شهر و خیابان مسلط می‌شود. "
+---
 <p><strong>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشگاه شهید بهشتی</strong></p>
 <p>مسیر دگرگونی خیابان تاریخی (شاه&zwnj;عباسی) مشهد؛ در دورۀ پهلوی اول| محمدصادق توسلی&zwnj;رجایی</p>
 <p>استادان راهنما: دکتر هادی ندیمی، دکتر محمد غلامعلی فلاح</p>
