--- a/_posts/2021-02-25-Y2qi.html
+++ b/_posts/2021-02-25-Y2qi.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری وبینار: «میان دریا و آسمان»" 
-authors: asmaneh 
-types: news 
-tags: وبینار,موزه‌ي هنرهای زیبا‌ی هوستون 
+---
+title: "برگزاری وبینار: «میان دریا و آسمان»"
+authors: asmaneh
+types: news
+tags: وبینار,موزه‌ي هنرهای زیبا‌ی هوستون
 featured: false
-slug: Y2qi 
-excerpt: این وبینار مقارن با نمایشگاه «میان دریا و آسمان: سفال‌های آبی و سفیدِ پارس و ورای آن» در موزۀ هنرهای زیبای هوستون برگزار می‌شود. در این وبینار، سفال‌های آبی و سفیدِ مجموعۀ این موزه به دقت بررسی می‌شود. 
---- 
+slug: Y2qi
+excerpt: "این وبینار مقارن با نمایشگاه «میان دریا و آسمان: سفال‌های آبی و سفیدِ پارس و ورای آن» در موزۀ هنرهای زیبای هوستون برگزار می‌شود. در این وبینار، سفال‌های آبی و سفیدِ مجموعۀ این موزه به دقت بررسی می‌شود. "
+---
 <p><strong>برگزاری وبینار: &laquo;میان دریا و آسمان&raquo;</strong></p>
 <p>میزبان: موزۀ هنرهای زیبای هوستون</p>
 <p>زمان: بخش اول، ۲۷ فوریه|۹ اسفند ۱۳۹۹؛ بخش دوم، ۶ مارس|۱۶ اسفند ۱۳۹۹</p>
