--- a/_posts/2021-03-10-qsAu.html
+++ b/_posts/2021-03-10-qsAu.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «نوروز: سال نو ایرانی، از اسطوره تا تاریخ»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,نوروز,اسطوره,تاریخ,تورج دریایی 
+---
+title: "برگزاری سخنرانی مجازی: «نوروز: سال نو ایرانی، از اسطوره تا تاریخ»"
+authors: asmaneh
+types: news
+tags: سخنرانی,نوروز,اسطوره,تاریخ,تورج دریایی
 featured: false
-featureImg: "/assets/img/posts/qsAu.jpg" 
-slug: qsAu 
-gallery: 
-- image_path: "/assets/img/posts/qsAu.jpg" 
-  title: "برگزاری سخنرانی مجازی: «نوروز: سال نو ایرانی، از اسطوره تا تاریخ»" 
- 
-excerpt: سخنران: تورج دریایی 
---- 
+featureImg: "/assets/img/posts/qsAu.jpg"
+slug: qsAu
+gallery:
+- image_path: "/assets/img/posts/qsAu.jpg"
+  title: "برگزاری سخنرانی مجازی: «نوروز: سال نو ایرانی، از اسطوره تا تاریخ»"
+
+excerpt: "سخنران: تورج دریایی "
+---
 <p><strong>برگزاری سخنرانی مجازی: &laquo;نوروز: سال نو ایرانی، از اسطوره تا تاریخ&raquo;</strong></p>
 <p>سخنران: تورج دریایی</p>
 <p>میزبان: دانشگاه جورج تاون</p>
