--- a/_posts/2021-03-28-e9fe.html
+++ b/_posts/2021-03-28-e9fe.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری سخنرانی مجازی: «هنر غارت‌شده و عدالت پسااستعماری: استعمارزدایی از موزه‌های هنری»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,هنر,استعمار,موزه 
+---
+title: "برگزاری سخنرانی مجازی: «هنر غارت‌شده و عدالت پسااستعماری: استعمارزدایی از موزه‌های هنری»"
+authors: asmaneh
+types: news
+tags: سخنرانی,هنر,استعمار,موزه
 featured: false
-slug: e9fe 
-excerpt: The symposium "Looted Art and Postcolonial Justice: Decolonizing the Art Museum," hosted by the California State University, Sacramento Art Department, will delve into repatriation struggles across the globe. 
---- 
+slug: e9fe
+excerpt: "The symposium Looted Art and Postcolonial Justice: Decolonizing the Art Museum, hosted by the California State University, Sacramento Art Department, will delve into repatriation struggles across the globe. "
+---
 <p>برگزاری سخنرانی مجازی: &laquo;هنر غارت&zwnj;شده و عدالت پسااستعماری: استعمارزدایی از موزه&zwnj;های هنری&raquo;</p>
 <p>میزبان: دانشگاه ایالتی کالیفرنیا، دپارتمان هنر سکرمنتو</p>
 <p>زمان: ۵ آوریل ۲۰۲۱| ۱۶ فروردین ۱۴۰۰</p>
