--- a/_posts/2021-03-31-bTgh.html
+++ b/_posts/2021-03-31-bTgh.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»" 
-authors: asmaneh 
-types: news 
-tags: میزگرد,موزه,فرهنگ 
+---
+title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»"
+authors: asmaneh
+types: news
+tags: میزگرد,موزه,فرهنگ
 featured: false
-featureImg: "/assets/img/posts/bTgh.jpg" 
-slug: bTgh 
-gallery: 
-- image_path: "/assets/img/posts/bTgh.jpg" 
-  title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»" 
- 
-excerpt: میزبان: مرکز هنری کافلر  
---- 
+featureImg: "/assets/img/posts/bTgh.jpg"
+slug: bTgh
+gallery:
+- image_path: "/assets/img/posts/bTgh.jpg"
+  title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»"
+
+excerpt: "میزبان: مرکز هنری کافلر  "
+---
 <p><strong>برگزاری میزگرد مجازی: &laquo;میراث سرقت: گفتگویی در باب موزه&zwnj;ها و اعادۀ فرهنگی&raquo;</strong></p>
 <p>اعضای میزگرد: کندیس هاپکینز، دن هیکس، جولی کروکس</p>
 <p>میزبان: مرکز هنری کافلر&nbsp;</p>
