--- a/_posts/2021-04-01-cAGN.html
+++ b/_posts/2021-04-01-cAGN.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری مجموعه گفتگوهای آنلاین اینستاگرامیِ «نکته» در باب هنر مدرن و معاصر خاورمیانه و شمال آفریقا" 
-authors: asmaneh 
-types: news 
-tags: گفتگو,هنر,مدرن,معاصر,خاورمیانه,آفریقا,رعنا حبیبی 
+---
+title: "برگزاری مجموعه گفتگوهای آنلاین اینستاگرامیِ «نکته» در باب هنر مدرن و معاصر خاورمیانه و شمال آفریقا"
+authors: asmaneh
+types: news
+tags: گفتگو,هنر,مدرن,معاصر,خاورمیانه,آفریقا,رعنا حبیبی
 featured: false
-featureImg: "/assets/img/posts/cAGN.jpg" 
-slug: cAGN 
-gallery: 
-- image_path: "/assets/img/posts/cAGN.jpg" 
-  title: "برگزاری مجموعه گفتگوهای آنلاین اینستاگرامیِ «نکته» در باب هنر مدرن و معاصر خاورمیانه و شمال آفریقا" 
- 
-excerpt: مهمان: دکتر رعنا حبیبی 
---- 
+featureImg: "/assets/img/posts/cAGN.jpg"
+slug: cAGN
+gallery:
+- image_path: "/assets/img/posts/cAGN.jpg"
+  title: "برگزاری مجموعه گفتگوهای آنلاین اینستاگرامیِ «نکته» در باب هنر مدرن و معاصر خاورمیانه و شمال آفریقا"
+
+excerpt: "مهمان: دکتر رعنا حبیبی "
+---
 <p><strong>برگزاری مجموعه گفتگوهای آنلاین اینستاگرامیِ &laquo;نکته&raquo; در باب هنر مدرن و معاصر خاورمیانه و شمال آفریقا</strong></p>
 <p>مهمان: دکتر رعنا حبیبی</p>
 <p>میزبان: مجمع هنر مدرن و معاصرِ جهان عرب، ایران، ترکیه (AMCA)</p>
