--- a/_posts/2021-04-17-6iKy.html
+++ b/_posts/2021-04-17-6iKy.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری سخنرانی مجازی: «خاطرۀ دوران باستان در معماری مدرن ایرانی و پارسی»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,دوران باستان,معماری مدرن,تالین گریگور 
+---
+title: "برگزاری سخنرانی مجازی: «خاطرۀ دوران باستان در معماری مدرن ایرانی و پارسی»"
+authors: asmaneh
+types: news
+tags: سخنرانی,دوران باستان,معماری مدرن,تالین گریگور
 featured: false
-slug: 6iKy 
-excerpt: In 1822 six fire temples adorned the cityscapes of West India. By the end of the century, Parsis had augmented that number tenfold. Many of these structures were erected in what they dubbed the “Persian Style,” on floor plans described as “open.” From the 1830s to the 1930s, the Persian Revival style evolved simultaneously and codependently in two different geo-cultures: the western coast of the Indian subcontinent, with large Parsi urban populations, as in Bombay and Surat, and the major cities 
---- 
+slug: 6iKy
+excerpt: "In 1822 six fire temples adorned the cityscapes of West India. By the end of the century, Parsis had augmented that number tenfold. Many of these structures were erected in what they dubbed the “Persian Style,” on floor plans described as “open.” From the 1830s to the 1930s, the Persian Revival style evolved simultaneously and codependently in two different geo-cultures: the western coast of the Indian subcontinent, with large Parsi urban populations, as in Bombay and Surat, and the major cities" 
+---
 <p><strong>برگزاری سخنرانی مجازی: &laquo;خاطرۀ دوران باستان در معماری مدرن ایرانی و پارسی&raquo;</strong></p>
 <p>سخنران: تالین گریگور</p>
 <p>میزبان: موزۀ هنر سیاتل</p>
