--- a/_posts/2021-04-19-dWbj.html
+++ b/_posts/2021-04-19-dWbj.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «شیخ بهایی؛ عالم ذوفنون عصر صفوی»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,شیخ بهایی,صفویان 
+---
+title: "برگزاری سخنرانی مجازی: «شیخ بهایی؛ عالم ذوفنون عصر صفوی»"
+authors: asmaneh
+types: news
+tags: سخنرانی,شیخ بهایی,صفویان
 featured: false
-featureImg: "/assets/img/posts/dWbj.jpg" 
-slug: dWbj 
-gallery: 
-- image_path: "/assets/img/posts/dWbj.jpg" 
-  title: "برگزاری سخنرانی مجازی: «شیخ بهایی؛ عالم ذوفنون عصر صفوی»" 
- 
-excerpt: میزبان: خانۀ اندیشمندان علوم انسانی؛ دبیر علمی: مهرشاد کاظمی 
---- 
+featureImg: "/assets/img/posts/dWbj.jpg"
+slug: dWbj
+gallery:
+- image_path: "/assets/img/posts/dWbj.jpg"
+  title: "برگزاری سخنرانی مجازی: «شیخ بهایی؛ عالم ذوفنون عصر صفوی»"
+
+excerpt: "میزبان: خانۀ اندیشمندان علوم انسانی؛ دبیر علمی: مهرشاد کاظمی "
+---
 <p>برگزاری سخنرانی مجازی: &laquo;شیخ بهایی؛ عالم ذوفنون عصر صفوی&raquo;</p>
 <p>سخنرانان&nbsp;</p>
 <p>- جعفر طاهری: &laquo;شیخ&zwnj;بهایی، معماری طبقۀ عامۀ ایرانی</p>
