--- a/_posts/2021-05-02-Pcft.html
+++ b/_posts/2021-05-02-Pcft.html
@@ -1,12 +1,12 @@
---- 
-title: "فراخوان ثبت‌نام برای دریافت کمک‌هزینۀ پژوهش و سفر" 
-authors: asmaneh 
-types: news 
-tags: کمک‌هزینه‌ی پژوهشی,سفر,مؤسسهٔ ایران‌شناسی بریتانیا 
+---
+title: "فراخوان ثبت‌نام برای دریافت کمک‌هزینۀ پژوهش و سفر"
+authors: asmaneh
+types: news
+tags: کمک‌هزینه‌ی پژوهشی,سفر,مؤسسهٔ ایران‌شناسی بریتانیا
 featured: false
-slug: Pcft 
-excerpt: BIPS Research and Travel Grant Awards are to assist scholars wishing to pursue research in the area of arts, humanities and social science research, relating to the Persianate world, particularly Iran, Afghanistan, Central Asia, Transcaucasia, Iraq, the Persian Gulf littoral and South Asia. Subject areas include, but are not limited to: Art, Anthropology, Archaeology, Classics, Cultural Studies, History, Language, Literature, Politics, Religious Studies, and Sociology. Scholars who apply must be 
---- 
+slug: Pcft
+excerpt: "BIPS Research and Travel Grant Awards are to assist scholars wishing to pursue research in the area of arts, humanities and social science research, relating to the Persianate world, particularly Iran, Afghanistan, Central Asia, Transcaucasia, Iraq, the Persian Gulf littoral and South Asia. Subject areas include, but are not limited to: Art, Anthropology, Archaeology, Classics, Cultural Studies, History, Language, Literature, Politics, Religious Studies, and Sociology. Scholars who apply must be" 
+---
 <p>فراخوان ثبت&zwnj;نام برای دریافت کمک&zwnj;هزینۀ پژوهش و سفر</p>
 <p>مؤسسۀ ایران&zwnj;شناسی بریتانیا (BIPS)</p>
 <p>مهلت ارسال مدارک و درخواست: ۱۴ مه ۲۰۲۱| ۲۴ اردیبهشت ۱۴۰۰</p>
