--- a/_posts/2021-05-11-f7nU.html
+++ b/_posts/2021-05-11-f7nU.html
@@ -1,23 +1,23 @@
---- 
-title: "برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,اسلامی,تاریخ هنر,استفانی مودلر 
+---
+title: "برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»"
+authors: asmaneh
+types: news
+tags: سخنرانی,اسلامی,تاریخ هنر,استفانی مودلر
 featured: false
-featureImg: "/assets/img/posts/f7nU.jpg" 
-slug: f7nU 
-gallery: 
-- image_path: "/assets/img/posts/f7nU.jpg" 
-  title: "برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»" 
- 
-excerpt: برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»
+featureImg: "/assets/img/posts/f7nU.jpg"
+slug: f7nU
+gallery:
+- image_path: "/assets/img/posts/f7nU.jpg"
+  title: "برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»"
+
+excerpt: "برگزاری سخنرانی مجازی: «چه چیزِ هنر اسلامی «اسلامی» است؟ گستردن مرزهای سنتی تاریخ هنر»"
 
 سخنران: استفانی مودلر
 
 میزبان: موزه هنرهای زیبای هوستون
 
-زمان: ۱۴ مه ۲۰۲۱|۲۴ اردیبهشت ۱۴۰۰ 
---- 
+زمان: ۱۴ مه ۲۰۲۱|۲۴ اردیبهشت ۱۴۰۰
+---
 <p>برگزاری سخنرانی مجازی: &laquo;چه چیزِ هنر اسلامی &laquo;اسلامی&raquo; است؟ گستردن مرزهای سنتی تاریخ هنر&raquo;</p>
 <p>سخنران: استفانی مودلر</p>
 <p>میزبان: موزه هنرهای زیبای هوستون</p>
