--- a/_posts/2021-05-15-JbXb.html
+++ b/_posts/2021-05-15-JbXb.html
@@ -1,23 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی, هنر,اصلاح‌شناسی,معاصر,اسلامی 
+---
+title: "برگزاری سخنرانی مجازی: «جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید»"
+authors: asmaneh
+types: news
+tags: سخنرانی, هنر,اصلاح‌شناسی,معاصر,اسلامی
 featured: false
-featureImg: "/assets/img/posts/JbXb.jpg" 
-slug: JbXb 
-gallery: 
-- image_path: "/assets/img/posts/JbXb.jpg" 
-  title: "برگزاری سخنرانی مجازی: «جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید»" 
- 
-excerpt: برگزاری سخنرانی مجازی: « جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید»
+featureImg: "/assets/img/posts/JbXb.jpg"
+slug: JbXb
+gallery:
+- image_path: "/assets/img/posts/JbXb.jpg"
+  title: "برگزاری سخنرانی مجازی: «جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید»"
 
-سخنران: ندی شبوط
-
-میزبان: موزه هنرهای زیبای هوستون
-
-زمان: ۱۵ مه ۲۰۲۱|۲۵ اردیبهشت ۱۴۰۰ 
---- 
+excerpt: "برگزاری سخنرانی مجازی: « جایگاه «اسلامی» در هنر معاصر: تأملی بر اصطلاح‌شناسی و رویکردهای جدید» سخنران: ندی شبوط میزبان: موزه هنرهای زیبای هوستون زمان: ۱۵ مه ۲۰۲۱|۲۵ اردیبهشت ۱۴۰۰ "
+---
 <p>برگزاری سخنرانی مجازی: &laquo; جایگاه &laquo;اسلامی&raquo; در هنر معاصر: تأملی بر اصطلاح&zwnj;شناسی و رویکردهای جدید&raquo;</p>
 <p>سخنران: ندی شبوط</p>
 <p>میزبان: موزه هنرهای زیبای هوستون</p>
