--- a/_posts/2021-08-11-KmJa.html
+++ b/_posts/2021-08-11-KmJa.html
@@ -1,12 +1,12 @@
---- 
-title: "تفریظ بر کتاب «مناسبات معماری و علوم در ایران دوران اسلامی» به قلم روح‌الله مجتهدزاده" 
-authors: mqayoomi 
-types: blog 
-tags: علوم,معماری,دوران اسلامی,کتاب,مناسبات علوم و معماری 
+---
+title: "تفریظ بر کتاب «مناسبات معماری و علوم در ایران دوران اسلامی» به قلم روح‌الله مجتهدزاده"
+authors: mqayoomi
+types: blog
+tags: علوم,معماری,دوران اسلامی,کتاب,مناسبات علوم و معماری
 featured: false
-slug: KmJa 
-excerpt: رسش از رابطۀ میانِ معرفت و معماری در هریک از پاره‌های تاریخی و جغرافیاییِ ایران پیشامدرنْ اقسام و ‏حوزه‌های گوناگونی دارد. برخی از این پرسش‌ها بیشتر اجتماعی و تاریخی است: معماران (و دیگر عاملانِ معماری) چه ‏معرفت‌هایی داشتند؟ این معرفت‌ها را چگونه و در کجا و از چه کسانی می‌آموختند؟ چقدر از این معرفت‌ها هنجارهای ‏اجتماعیِ عمومی بود و چقدر از آنها هنجارهای اجتماعیِ خاصِ اهلِ پیشۀ معماری؟ معمارانْ این معرفت‌ها را چگونه و ‏در کجا به‌کار می‌بستند؟  
---- 
+slug: KmJa
+excerpt: "رسش از رابطۀ میانِ معرفت و معماری در هریک از پاره‌های تاریخی و جغرافیاییِ ایران پیشامدرنْ اقسام و ‏حوزه‌های گوناگونی دارد. برخی از این پرسش‌ها بیشتر اجتماعی و تاریخی است: معماران (و دیگر عاملانِ معماری) چه ‏معرفت‌هایی داشتند؟ این معرفت‌ها را چگونه و در کجا و از چه کسانی می‌آموختند؟ چقدر از این معرفت‌ها هنجارهای ‏اجتماعیِ عمومی بود و چقدر از آنها هنجارهای اجتماعیِ خاصِ اهلِ پیشۀ معماری؟ معمارانْ این معرفت‌ها را چگونه و ‏در کجا به‌کار می‌بستند؟  "
+---
 <p><strong>تفریظ بر کتاب &laquo;مناسبات معماری و علوم در ایران دوران اسلامی&raquo; به قلم روح&zwnj;الله مجتهدزاده</strong></p>
 <p>مهرداد قیومی بیدهندی</p>
 <p>&nbsp;</p>
