--- a/_posts/2021-08-13-5JCJ.html
+++ b/_posts/2021-08-13-5JCJ.html
@@ -1,12 +1,12 @@
---- 
-title: "" 
-authors: سلمان رضوی کوهپایه 
-types: blog 
-tags: زکانی,شورای شهر 
+---
+title: ""
+authors: سلمان رضوی کوهپایه
+types: blog
+tags: زکانی,شورای شهر
 featured: false
-slug: 5JCJ 
-excerpt: در این ایام که خبر حسن انتخاب شورای مکرم شهر تهران شخصی نکونام و توانا و شایسته را به منصب شهرداری جان ‏این بنده را از شور و شعف آکنده است، چندان دل بدان مشغول داشته‌ام که دوش، شیخ محمدحسن سیرجانی، ‏نبیّ‌السّارقین، را به خواب دیدم؛ سخت شادان و خندان. گفتم: ای شیخ، این حال از چیست؟ مرا اشارتی کرد به کتاب ‏شریف اخلاق الاشراف. 
---- 
+slug: 5JCJ
+excerpt: "در این ایام که خبر حسن انتخاب شورای مکرم شهر تهران شخصی نکونام و توانا و شایسته را به منصب شهرداری جان ‏این بنده را از شور و شعف آکنده است، چندان دل بدان مشغول داشته‌ام که دوش، شیخ محمدحسن سیرجانی، ‏نبیّ‌السّارقین، را به خواب دیدم؛ سخت شادان و خندان. گفتم: ای شیخ، این حال از چیست؟ مرا اشارتی کرد به کتاب ‏شریف اخلاق الاشراف. "
+---
 <p><strong>از زاکانی به زاکانی</strong></p>
 <p>سلمان رضوی کوهپایه</p>
 <p>&nbsp;</p>
