--- a/_posts/2021-08-22-aJ4q.html
+++ b/_posts/2021-08-22-aJ4q.html
@@ -1,25 +1,15 @@
---- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع" 
-authors: asmaneh 
-types: news 
+---
+title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع"
+authors: asmaneh
+types: news
 featured: false
-slug: aJ4q 
-gallery: 
-- image_path: "/assets/img/posts/aJ4q-1.jpg" 
-  title: "" 
- 
-excerpt: برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
+slug: aJ4q
+gallery:
+- image_path: "/assets/img/posts/aJ4q-1.jpg"
+  title: ""
 
-دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع| مریم شائیان
-
-استاد راهنما: دکتر مهرداد قیومی بیدهندی
-
-استاد مشاور: صبا مدنی
-
-داوران: دکتر محمد فلاح، دکتر مهنام نجفی
-
-زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۰ صبح 
---- 
+excerpt: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی  دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین‌السلطنه؛ ارزیابی منابع| مریم شائیان  استاد راهنما: دکتر مهرداد قیومی بیدهندی  استاد مشاور: صبا مدنی  داوران: دکتر محمد فلاح، دکتر مهنام نجفی  زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۰ صبح"  
+---
 <p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
 <p>دگرگونی عینی و ذهنی معماری خانگی در روزنامۀ خاطرات عین&zwnj;السلطنه؛ ارزیابی منابع| مریم شائیان</p>
 <p>استاد راهنما: دکتر مهرداد قیومی بیدهندی</p>
