--- a/_posts/2021-08-22-kTzs.html
+++ b/_posts/2021-08-22-kTzs.html
@@ -1,20 +1,15 @@
---- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|تاریخ اجتماعی معماری خانه از منظر ژیروئار" 
-authors: asmaneh 
-types: news 
+---
+title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|تاریخ اجتماعی معماری خانه از منظر ژیروئار"
+authors: asmaneh
+types: news
 featured: false
-slug: kTzs 
-gallery: 
-- image_path: "undefined" 
-  title: "" 
- 
-excerpt: برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
-تاریخ اجتماعی معماری خانه از منظر ژیروئار| مهدی حسینی
-استاد راهنما: دکتر مهرداد قیومی بیدهندی
-استاد مشاور: دکتر نگار ذیلابی
-داوران: دکتر زهرا اهری، دکتر مهدی سلطانی
-زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۴ 
---- 
+slug: kTzs
+gallery:
+- image_path: "undefined"
+  title: ""
+
+excerpt: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی تاریخ اجتماعی معماری خانه از منظر ژیروئار| مهدی حسینی استاد راهنما: دکتر مهرداد قیومی بیدهندی استاد مشاور: دکتر نگار ذیلابی داوران: دکتر زهرا اهری، دکتر مهدی سلطانی زمان: دوشنبه ۱ شهریور ۱۴۰۰، ساعت ۱۴  "
+---
 <p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
 <p>تاریخ اجتماعی معماری خانه از منظر ژیروئار| مهدی حسینی</p>
 <p>استاد راهنما: دکتر مهرداد قیومی بیدهندی</p>
