--- a/_posts/2021-08-24-qPR5.html
+++ b/_posts/2021-08-24-qPR5.html
@@ -1,25 +1,15 @@
---- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| خانهٔ ملک در بازار تهران" 
-authors: asmaneh 
-types: news 
+---
+title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران| خانهٔ ملک در بازار تهران"
+authors: asmaneh
+types: news
 featured: false
-slug: qPR5 
-gallery: 
-- image_path: "/assets/img/posts/qPR5-1.jpg" 
-  title: "" 
- 
-excerpt: برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
+slug: qPR5
+gallery:
+- image_path: "/assets/img/posts/qPR5-1.jpg"
+  title: ""
 
-خانهٔ ملک در بازار تهران|محمد صادق نجف‌زاده 
-
-استاد راهنما: دکتر زهرا اهری 
-
-داوران: دکتر محمد غلامعلی فلاح، دکتر نیلوفر رضوی
-
-زمان: چهارشنبه ۳ شهریور ۱۴۰۰، ساعت ۱۰ صبح
-
- 
---- 
+excerpt: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی  خانهٔ ملک در بازار تهران|محمد صادق نجف‌زاده   استاد راهنما: دکتر زهرا اهری   داوران: دکتر محمد غلامعلی فلاح، دکتر نیلوفر رضوی  زمان: چهارشنبه ۳ شهریور ۱۴۰۰، ساعت ۱۰ صبح    "
+---
 <p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
 <p>خانهٔ ملک در بازار تهران|محمد صادق نجف&zwnj;زاده&nbsp;</p>
 <p>استاد راهنما: دکتر زهرا اهری&nbsp;</p>
