--- a/_posts/2021-08-29-TVUh.html
+++ b/_posts/2021-08-29-TVUh.html
@@ -1,20 +1,16 @@
---- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|خانه‌های محلۀ قبلۀ کوخرد، بستک" 
-authors: asmaneh 
-types: news 
-tags: دفاع,کارشناسی ارشد,مطالعات معماری,کوخرد,سهیل وحدانی 
+---
+title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|خانه‌های محلۀ قبلۀ کوخرد، بستک"
+authors: asmaneh
+types: news
+tags: دفاع,کارشناسی ارشد,مطالعات معماری,کوخرد,سهیل وحدانی
 featured: false
-slug: TVUh 
-gallery: 
-- image_path: "/assets/img/posts/TVUh-1.jpg" 
-  title: "" 
- 
-excerpt: برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
-خانه‌های محلۀ قبلۀ کوخرد، بستک| سهیل وحدانی
-استادان راهنما: دکتر زهرا اهری، دکتر مهنام نجفی
-داوران: دکتر زهره تفضلی، دکتر عاطفه کرباسی
-زمان: دوشنبه ۸ شهریور ۱۴۰۰، ساعت ۱۴ 
---- 
+slug: TVUh
+gallery:
+- image_path: "/assets/img/posts/TVUh-1.jpg"
+  title: ""
+
+excerpt: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی خانه‌های محلۀ قبلۀ کوخرد، بستک| سهیل وحدانی استادان راهنما: دکتر زهرا اهری، دکتر مهنام نجفی داوران: دکتر زهره تفضلی، دکتر عاطفه کرباسی زمان: دوشنبه ۸ شهریور ۱۴۰۰، ساعت ۱۴  "
+---
 <p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
 <p>خانه&zwnj;های محلۀ قبلۀ کوخرد، بستک| سهیل وحدانی</p>
 <p>استادان راهنما: دکتر زهرا اهری، دکتر مهنام نجفی</p>
