--- a/_posts/2021-09-16-zBZK.html
+++ b/_posts/2021-09-16-zBZK.html
@@ -1,21 +1,16 @@
---- 
-title: "جلسۀ دفاع از رسالۀ دکتری معماری: «معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق»" 
-authors: asmaneh 
-types: news 
-tags: دفاع,دکتری,حمیدرضا پیشوایی,کاخ گلستان 
+---
+title: "جلسۀ دفاع از رسالۀ دکتری معماری: «معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق»"
+authors: asmaneh
+types: news
+tags: دفاع,دکتری,حمیدرضا پیشوایی,کاخ گلستان
 featured: false
-slug: zBZK 
-gallery: 
-- image_path: "/assets/img/posts/zBZK-1.jpg" 
-  title: "" 
- 
-excerpt: جلسۀ دفاع از رسالۀ دکتری معماری: «معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق»
-دانشجو: حمیدرضا پیشوایی
-استاد راهنما: دکتر زهرا اهری، دکتر مهرداد قیومی بیدهندی
-استادان مشاور: دکتر داریوش رحمانیان، دکتر امیر مازیار
-داوران: دکتر هادی ندیمی، دکتر حمیدرضا جیحانی، دکتر فرشید امامی
-زمان: یکشنبه ۲۸ شهریور ۱۴۰۰، ساعت ۱۸ 
---- 
+slug: zBZK
+gallery:
+- image_path: "/assets/img/posts/zBZK-1.jpg"
+  title: ""
+
+excerpt: "جلسۀ دفاع از رسالۀ دکتری معماری: «معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق» دانشجو: حمیدرضا پیشوایی استاد راهنما: دکتر زهرا اهری، دکتر مهرداد قیومی بیدهندی استادان مشاور: دکتر داریوش رحمانیان، دکتر امیر مازیار داوران: دکتر هادی ندیمی، دکتر حمیدرضا جیحانی، دکتر فرشید امامی زمان: یکشنبه ۲۸ شهریور ۱۴۰۰، ساعت ۱۸"  
+---
 <p>جلسۀ دفاع از رسالۀ دکتری معماری: &laquo;معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق&raquo;</p>
 <p>دانشجو: حمیدرضا پیشوایی</p>
 <p>استاد راهنما: دکتر زهرا اهری، دکتر مهرداد قیومی بیدهندی</p>
