--- a/_posts/2021-03-07-tkKb.html
+++ b/_posts/2021-03-07-tkKb.html
@@ -1,12 +1,12 @@
---- 
-title: "برگزاری سخنرانی مجازی: «فرهنگ بصری و مادیِ ری بر مبنای کاوش‌های انجام‌گرفته به سرپرستی اریک اشمیت در اواخر دهۀ ۱۹۳۰»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,ری,باستان‌شناسی,اشمیت,رناتا هلد 
+---
+title: "برگزاری سخنرانی مجازی: «فرهنگ بصری و مادیِ ری بر مبنای کاوش‌های انجام‌گرفته به سرپرستی اریک اشمیت در اواخر دهۀ ۱۹۳۰»"
+authors: asmaneh
+types: news
+tags: سخنرانی,ری,باستان‌شناسی,اشمیت,رناتا هلد
 featured: false
-slug: tkKb 
-excerpt: سخنران: رناتا هلد 
---- 
+slug: tkKb
+excerpt: "سخنران: رناتا هلد "
+---
 <p>برگزاری سخنرانی مجازی: &laquo;فرهنگ بصری و مادیِ ری بر مبنای کاوش&zwnj;های انجام&zwnj;گرفته به سرپرستی اریک اشمیت در اواخر دهۀ ۱۹۳۰&raquo;</p>
 <p>سخنران: رناتا هلد</p>
 <p>میزبان: مجموعه سخنرانی&zwnj;های برنامۀ بنیاد آقاخان برای معماری اسلامی در دانشگاه هاروارد</p>
