--- a/_posts/2021-03-26-72fq.html
+++ b/_posts/2021-03-26-72fq.html
@@ -1,17 +1,17 @@
---- 
-title: "برگزاری سخنرانی مجازی: «تصور یک جهان: فردیت و امپراطوری در ایرانِ صفوی»" 
-authors: asmaneh 
-types: news 
-tags: سخنرانی,ایران,صفویان,کشوررضوی 
+---
+title: "برگزاری سخنرانی مجازی: «تصور یک جهان: فردیت و امپراطوری در ایرانِ صفوی»"
+authors: asmaneh
+types: news
+tags: سخنرانی,ایران,صفویان,کشوررضوی
 featured: false
-featureImg: "/assets/img/posts/72fq.jpg" 
-slug: 72fq 
-gallery: 
-- image_path: "/assets/img/posts/72fq.jpg" 
-  title: "برگزاری سخنرانی مجازی: «تصور یک جهان: فردیت و امپراطوری در ایرانِ صفوی»" 
- 
-excerpt: سخنران: کشور رضوی 
---- 
+featureImg: "/assets/img/posts/72fq.jpg"
+slug: 72fq
+gallery:
+- image_path: "/assets/img/posts/72fq.jpg"
+  title: "برگزاری سخنرانی مجازی: «تصور یک جهان: فردیت و امپراطوری در ایرانِ صفوی»"
+
+excerpt: "سخنران: کشور رضوی "
+---
 <p>برگزاری سخنرانی مجازی: &laquo;تصور یک جهان: فردیت و امپراطوری در ایرانِ صفوی&raquo;</p>
 <p>سخنران: کشور رضوی</p>
 <p>میزبان: مجموعه سخنرانی&zwnj;های برنامۀ بنیاد آقاخان برای معماری اسلامی در دانشگاه هاروارد</p>
