--- a/_posts/2016-09-21-V7UT.html
+++ b/_posts/2016-09-21-V7UT.html
@@ -1,5 +1,5 @@
 --- 
-title: "۶۹. روند تغییرات شهری اصفهان در دوره صفویه از آغاز دورۀ شاه صفی تا پایان دورۀ شاه‌عباس‌دوم| امیر محمد ‌‌چنگیزی‌محمدی" 
+title: "روند تغییرات شهری اصفهان در دوره صفویه از آغاز دورۀ شاه صفی تا پایان دورۀ شاه‌عباس‌دوم| امیر محمد ‌‌چنگیزی‌محمدی" 
 authors: asmaneh 
 types: research 
 featured: false
