--- a/_posts/2016-09-21-z36e.html
+++ b/_posts/2016-09-21-z36e.html
@@ -1,5 +1,5 @@
 --- 
-title: "۶۷. تلقی از معماری در ایران در آینۀ نشریات معماری برهۀ اول دورۀ پهلوی دوم| زهرا میرزایی" 
+title: "تلقی از معماری در ایران در آینۀ نشریات معماری برهۀ اول دورۀ پهلوی دوم| زهرا میرزایی" 
 authors: asmaneh 
 types: research 
 featured: false
