--- a/_posts/2016-09-21-RT9e.html
+++ b/_posts/2016-09-21-RT9e.html
@@ -1,5 +1,5 @@
 --- 
-title: "۶۸. زبان بصری و کلامی مقرنس در نوشته‌ها و نقشه‌های استاد حسین لرزاده | سلمان مفید" 
+title: "زبان بصری و کلامی مقرنس در نوشته‌ها و نقشه‌های استاد حسین لرزاده | سلمان مفید" 
 authors: asmaneh 
 types: research 
 featured: false
