--- a/_posts/2017-02-18-GTdF.html
+++ b/_posts/2017-02-18-GTdF.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۳. قصۀ ساختن خانه‌ای در اصفهان قاجاری| سمانه محسنی حسین‌آبادی" 
+title: "قصۀ ساختن خانه‌ای در اصفهان قاجاری| سمانه محسنی حسین‌آبادی" 
 authors: asmaneh 
 types: research 
 featured: false
