--- a/_posts/2017-02-18-3C6X.html
+++ b/_posts/2017-02-18-3C6X.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۲.مسجد سنجیدۀ قزوین: بررسی چیستی و سیر تحول| لیلا قاسمی" 
+title: "مسجد سنجیدۀ قزوین: بررسی چیستی و سیر تحول| لیلا قاسمی" 
 authors: asmaneh 
 types: research 
 featured: false
