--- a/_posts/2017-02-18-JViR.html
+++ b/_posts/2017-02-18-JViR.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۰. پرسش از شهر در متون سدۀ هشتم| زهرا مشفقیان" 
+title: "پرسش از شهر در متون سدۀ هشتم| زهرا مشفقیان" 
 authors: asmaneh 
 types: research 
 featured: false
