--- a/_posts/2017-05-20-8HBV.html
+++ b/_posts/2017-05-20-8HBV.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۶. مدرسۀ دارالفنون: بازنمایی بر مبنای اسناد تصویری| سیده بشری موسوی" 
+title: "مدرسۀ دارالفنون: بازنمایی بر مبنای اسناد تصویری| سیده بشری موسوی" 
 authors: asmaneh 
 types: research 
 featured: false
