--- a/_posts/2017-02-18-eQqC.html
+++ b/_posts/2017-02-18-eQqC.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۱. هستان‌شناسی تاریخ معماری ایران برمبنای آثار دانشوران معاصر| دنا شمسی‌زاده حیات‌داودی" 
+title: "هستان‌شناسی تاریخ معماری ایران برمبنای آثار دانشوران معاصر| دنا شمسی‌زاده حیات‌داودی" 
 authors: asmaneh 
 types: research 
 featured: false
