--- a/_posts/2017-02-18-fKvi.html
+++ b/_posts/2017-02-18-fKvi.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۵. بررسی آراء غزالی دربارۀ معماری با محوریت کتاب احیاء علوم‌الدین| احسان کاخانی" 
+title: "بررسی آراء غزالی دربارۀ معماری با محوریت کتاب احیاء علوم‌الدین| احسان کاخانی" 
 authors: asmaneh 
 types: research 
 featured: false
