--- a/_posts/2017-07-22-6mui.html
+++ b/_posts/2017-07-22-6mui.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۸. شناخت روشِ تحقیقِ کتاب هندسه و تزیین در معماری اسلامی|نرگس ضمیری" 
+title: "شناخت روشِ تحقیقِ کتاب هندسه و تزیین در معماری اسلامی|نرگس ضمیری" 
 authors: asmaneh 
 types: research 
 featured: false
