--- a/_posts/2017-06-21-zfpU.html
+++ b/_posts/2017-06-21-zfpU.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۷. حسینیه ارشاد: بررسی نسبت کالبد با سیاق فرهنگی و اجتماعی|صبا مدنی قهفرخی" 
+title: "حسینیه ارشاد: بررسی نسبت کالبد با سیاق فرهنگی و اجتماعی|صبا مدنی قهفرخی" 
 authors: asmaneh 
 types: research 
 featured: false
