--- a/_posts/2017-02-18-bypE.html
+++ b/_posts/2017-02-18-bypE.html
@@ -1,5 +1,5 @@
 --- 
-title: "۶۶. «تصور فضایی» و جایگاه آن در تاریخ معماری در نزد زیکفریت گیدئون| رقیه حسنی" 
+title: "«تصور فضایی» و جایگاه آن در تاریخ معماری در نزد زیکفریت گیدئون| رقیه حسنی" 
 authors: asmaneh 
 types: research 
 featured: false
