--- a/_posts/2018-01-21-DwSN.html
+++ b/_posts/2018-01-21-DwSN.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۴. بررسی دگرگونی‌های حرم حضرت معصومه (س) در دورۀ ناصری| حانیه قاضی‌زاده" 
+title: "بررسی دگرگونی‌های حرم حضرت معصومه (س) در دورۀ ناصری| حانیه قاضی‌زاده" 
 authors: asmaneh 
 types: research 
 featured: false
