--- a/_posts/2017-09-22-WauV.html
+++ b/_posts/2017-09-22-WauV.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۹. واژگان معماری مطلع‌الشمس: گامی به سوی تدوین فرهنگ‌نامۀ معماری دورۀ قاجاریان| مهدی محمدی" 
+title: "واژگان معماری مطلع‌الشمس: گامی به سوی تدوین فرهنگ‌نامۀ معماری دورۀ قاجاریان| مهدی محمدی" 
 authors: asmaneh 
 types: research 
 featured: false
