--- a/_posts/2018-06-21-RdMy.html
+++ b/_posts/2018-06-21-RdMy.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۰. بازشناسی مسجد و مدرسۀ دارالاحسان سنندج| سید کامیار نقشبندی" 
+title: "بازشناسی مسجد و مدرسۀ دارالاحسان سنندج| سید کامیار نقشبندی" 
 authors: asmaneh 
 types: research 
 featured: false
