--- a/_posts/2021-09-07-VPKj.html
+++ b/_posts/2021-09-07-VPKj.html
@@ -1,8 +1,8 @@
 --- 
-title: "جلسهٔ دفاع از پایان‌نامهٔ کارشناسی ارشد مطالعات معماری ایران| روایت پیدایش و رشد یوسف‌آباد؛ قصهٔ شکل‌گیری و توسعهٔ محله‌ای در تهران" 
+title: "روایت پیدایش و رشد یوسف‌آباد؛ قصهٔ شکل‌گیری و توسعهٔ محله‌ای در تهران| جلسهٔ دفاع از پایان‌نامهٔ کارشناسی ارشد مطالعات معماری ایران" 
 authors: asmaneh 
 types: news 
-tags: دفاع,کارشناسی ارشد,مطالعات معماری,یوسف‌آباد 
+tags: دفاع,کارشناسی ارشد,مطالعات معماری,یوسف‌آباد,تاریخ شهر,تاریخ تهران,تهران‌شناسی,توسعه محله‌ای,نرگس عارفی 
 featured: false
 slug: VPKj 
 gallery: 
@@ -10,20 +10,13 @@ gallery:
   title: "" 
  
 --- 
-<p>جلسهٔ دفاع از پایان&zwnj;نامهٔ کارشناسی ارشد مطالعات معماری ایران</p>
+<p><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/VPKj-1.jpg" alt="" width="302" height="586" /></p>
+<p style="text-align: right;">دانشجو: نرگس عافی</p>
+<p style="text-align: right;">استادان راهنما: دکتر پیروز حناچی، دکتر الهام اندرودی</p>
+<p style="text-align: right;">استادان داور: دکتر مریم غروی خوانساری، دکتر محمدصالح شکوهی بیدهندی</p>
+<p style="text-align: right;">زمان: چهارشنبه ۱۷ شهریور ۱۴۰۰، ساعت ۱۰</p>
+<p style="text-align: right;">از این پیوند می&zwnj;توانید ازطریق برنامۀ ادوبی کانکت به&zwnj;صورت مهمان در جلسه شرکت کنید: <a href="http://vroom.ut.ac.ir/arch4" target="_blank" rel="noopener">http://vroom.ut.ac.ir/arch4</a></p>
 <p>&nbsp;</p>
-<p>&laquo;روایت پیدایش و رشد یوسف&zwnj;آباد؛ قصهٔ شکل&zwnj;گیری و توسعهٔ محله&zwnj;ای در تهران&raquo;</p>
 <p>&nbsp;</p>
-<p>نرگس عافی</p>
 <p>&nbsp;</p>
-<p>استادان راهنما:</p>
-<p>دکتر پیروز حناچی</p>
-<p>دکتر الهام اندرودی</p>
 <p>&nbsp;</p>
-<p>استادان داور:</p>
-<p>دکتر مریم غروی خوانساری</p>
-<p>دکتر محمدصالح شکوهی بیدهندی</p>
-<p>&nbsp;</p>
-<p>چهارشنبه ۱۷ شهریور ۱۴۰۰، ساعت ۱۰</p>
-<p>&nbsp;</p>
-<p>دانشگاه تهران، پردیس هنرهای زیبا، دانشکدهٔ معماری</p>
