--- a/_posts/2017-02-18-Gsp7.html
+++ b/_posts/2017-02-18-Gsp7.html
@@ -1,5 +1,5 @@
 --- 
-title: "۷۴. مدرسۀ ضیائیه یزد: سیر تحول کالبدی، تاریخ‌گذاری، چیستی| مجتبی مهرعلی کردبچه" 
+title: "مدرسۀ ضیائیه یزد: سیر تحول کالبدی، تاریخ‌گذاری، چیستی| مجتبی مهرعلی کردبچه" 
 authors: asmaneh 
 types: research 
 featured: false
