--- a/_posts/2018-08-23-Dfmu.html
+++ b/_posts/2018-08-23-Dfmu.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۱. شناسایی ساختار اصلی همدان در دورۀ قاجاریه|عاطفه تاج‌بخش فرید" 
+title: "شناسایی ساختار اصلی همدان در دورۀ قاجاریه|عاطفه تاج‌بخش فرید" 
 authors: asmaneh 
 types: research 
 featured: false
