--- a/_posts/2018-09-23-ADw2.html
+++ b/_posts/2018-09-23-ADw2.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۲. شناخت ساختار شهر نجف‌آباد در دورۀ قاجاریان|زهرا صالحی نجف‌آبادی" 
+title: "شناخت ساختار شهر نجف‌آباد در دورۀ قاجاریان|زهرا صالحی نجف‌آبادی" 
 authors: asmaneh 
 types: research 
 featured: false
