--- a/_posts/2018-08-23-yi75.html
+++ b/_posts/2018-08-23-yi75.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۳. روایت سرآغاز معماری تئاتر در ایران: بررسی مکان‌های اولیۀ تئاتر در تهران|فائزه پناهنده" 
+title: "روایت سرآغاز معماری تئاتر در ایران: بررسی مکان‌های اولیۀ تئاتر در تهران|فائزه پناهنده" 
 authors: asmaneh 
 types: research 
 featured: false
