--- a/_posts/2018-10-23-pVcH.html
+++ b/_posts/2018-10-23-pVcH.html
@@ -1,5 +1,5 @@
 --- 
-title: "۸۶. معماری و زندگی در خانه‌های ابرقو: مستندنگاری خانه‌های خاندان روحی در محلۀ بازار و زندگی جاری در آنها|حمید روحی" 
+title: "معماری و زندگی در خانه‌های ابرقو: مستندنگاری خانه‌های خاندان روحی در محلۀ بازار و زندگی جاری در آنها|حمید روحی" 
 authors: asmaneh 
 types: research 
 featured: false
